<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragmentLector"
    android:layout_marginBottom="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        android:layout_marginTop="16dp">

        <ImageButton
            android:id="@+id/botonQR"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/IB"
            app:srcCompat="@drawable/qr_lania" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:layout_marginStart="17dp"
                android:text="@string/qr_tex1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_marginStart="17dp"
                android:text="@string/qr_tex2"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>



</LinearLayout>