<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistroESFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="155dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="31dp"
                android:text="@string/ver_1" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="328dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:backgroundTint="@color/ColorPrincipal">

                </android.support.design.widget.TextInputEditText>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="176dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/ver_2" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="328dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:backgroundTint="@color/ColorPrincipal">

                </android.support.design.widget.TextInputEditText>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="80dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/ver_3" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="328dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:backgroundTint="@color/ColorPrincipal">

                </android.support.design.widget.TextInputEditText>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="165dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/ver_4" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="328dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp">

                <android.support.design.widget.TextInputEditText
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:backgroundTint="@color/ColorPrincipal">

                </android.support.design.widget.TextInputEditText>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="250dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/ver_5" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="328dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="5dp">

                    <android.support.design.widget.TextInputEditText
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:backgroundTint="@color/ColorPrincipal">

                    </android.support.design.widget.TextInputEditText>

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="267dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/ver_6" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="328dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="5dp">

                    <android.support.design.widget.TextInputEditText
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:backgroundTint="@color/ColorPrincipal">

                    </android.support.design.widget.TextInputEditText>

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="57dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/ver_7" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="328dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="5dp">

                    <android.support.design.widget.TextInputEditText
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:backgroundTint="@color/ColorPrincipal">

                    </android.support.design.widget.TextInputEditText>

                </android.support.design.widget.TextInputLayout>


            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/check_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="46dp"
                android:orientation="horizontal">



                <android.support.design.button.MaterialButton
                    android:id="@+id/btnAceptar"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:text="@string/bot_1"
                    android:background="@color/ColorPrincipal"
                    android:textColor="@color/ColorBase">

                </android.support.design.button.MaterialButton>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>